# pong

./: CMakeLists.txt  LICENSE  main.cc
build_support/: gcc_release.sh
config_tools/: CMakeLists.txt
config_tools/include/config_tools/: config_tools.hh
config_tools/src/: config_tools.cc
external_projects/: CMakeLists.txt
game/: CMakeLists.txt  board.hh  board.inl  game.cc
kinematics/: CMakeLists.txt
kinematics/include/kinematics/: ball.hh  paddle.hh
kinematics/src/: ball.cc  paddle.cc
